[project]
name = "doonook-chinese-calendar"
version = "0.1.0"
description = ""
authors = [
    {name = "Rex Xu",email = "doonookltd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "sxtwl (>=2.0.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "doonook_chinese_calendar", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
